--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,7 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+
+  weather-api-test:
+    build: .
+    command: ["npm", "test"]
